[package]
name = "memetendo-unsafe-boy-advance"
version = "0.1.0"
description = "A low-level Game Boy Advance emulator, written in Rust"
authors = ["Sean Dewar <https://github.com/seandewar>"]
edition = "2021"

[dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"
intbits = "0.2.0"
bitmatch = "0.1.1"
clap = { version = "3.1.18", features = ["cargo"] }
