[package]
name = "libmemetendo"
version = "0.1.0"
description = "A Rust library for emulating the Game Boy Advance"
authors = ["Sean Dewar <https://github.com/seandewar>"]
edition = "2021"

[dependencies]
bitmatch = "0.1.1"
intbits = "0.2.0"
strum = "0.24.0"
strum_macros = "0.24.0"
tinyvec = "1.6.0"

[dev-dependencies]
image = { version = "0.24.2", default-features = false, features = ["png"] }
once_cell = "1.12.0"
