[package]
name = "memetendo-unsafe-boy-advance"
version = "0.1.0"
description = "A Game Boy Advance emulator, written in Rust"
authors = ["Sean Dewar <https://github.com/seandewar>"]
edition = "2021"

[dependencies]
libmemetendo = { path = "../libmemetendo" }
clap = { version = "3.1.18", features = ["cargo"] }
sdl2 = { version = "0.35.2", features = ["bundled"] }
anyhow = "1.0.56"
