[package]
name = "memetendo-unsafe-boy-advance"
version = "0.1.0"
description = "A Game Boy Advance emulator, written in Rust"
authors = ["Sean Dewar <https://github.com/seandewar>"]
edition = "2021"

[dependencies]
libmemetendo = { path = "../libmemetendo" }
anyhow = "1.0.56"
clap = { version = "3.1.18", features = ["cargo"] }
env_logger = "0.9.1"
log = "0.4.17"
sdl2 = { version = "0.35.2" }
